--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,3 +4,23 @@ body, html{
 	padding:0;
 	margin:0;
 }
+
+.container{
+	margin-right: auto;
+	margin-left: auto;
+	width:300px;
+	text-align: center;
+}
+
+.container h3{
+	font-weight: 800;
+	font-size: 24px;
+}
+
+.container .bookmarklet{
+
+}
+
+.container .bookmarklet a{
+
+}
