--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,8 @@ body, html{
 	height:100%;
 	padding:0;
 	margin:0;
+	background:#9397fa;
+	color:#FFF;
 }
 
 .container{
@@ -12,9 +14,11 @@ body, html{
 	text-align: center;
 }
 
-.container h3{
+.container h1{
 	font-weight: 800;
 	font-size: 24px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 .container .bookmarklet{
