--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,7 +18,8 @@ body, html{
 	font-weight: 800;
 	font-size: 24px;
 	margin-left:auto;
-	margin-right:auto;
+	margin-right:auto
+	margin-top:40px;
 }
 
 .container .bookmarklet{
