--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@ body, html{
 	height:100%;
 	padding:0;
 	margin:0;
-	background:#9397fa;
+	background:#9294fd;
 	color:#FFF;
 }
 
@@ -17,9 +17,7 @@ body, html{
 .container h1{
 	font-weight: 800;
 	font-size: 24px;
-	margin-left:auto;
-	margin-right:auto
-	margin-top:40px;
+	margin: 120px auto 80px auto;
 }
 
 .container .bookmarklet{
