added charity class and removed un-used classes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,10 +20,8 @@ body, html{
 	margin: 120px auto 80px auto;
 }
 
-.container .bookmarklet{
-
-}
-
-.container .bookmarklet a{
-
+.charity{
+	position:absolute;
+	bottom:0;
+	left:0;
 }
