--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,25 +3,50 @@ body, html{
 	height:100%;
 	padding:0;
 	margin:0;
-	background:#9294fd;
-	color:#FFF;
+	background:#ea006e;
+	color:#e5e5e5;
+	font-family: 'Varela Round', sans-serif;
+	font-weight:100;
+	font-size:13px;
 }
 
 .container{
-	margin-right: auto;
-	margin-left: auto;
-	width:300px;
+	width:580px;
 	text-align: center;
+	position:absolute;
+	top:50%;
+	left:50%;
+	margin-top:-280px;
+	margin-left:-290px;
+
 }
 
-.container h1{
-	font-weight: 800;
-	font-size: 24px;
-	margin: 120px auto 80px auto;
+#glasses{
+	margin-left:60px;
+	margin-bottom:40px;
 }
 
 .charity{
 	position:absolute;
 	bottom:0;
 	left:0;
+}
+.green{
+	color:#00f0ff;
+}
+.bump{
+	margin-bottom:10px;
+}
+.footer{
+	font-size:10px;
+	position:fixed;
+	bottom:4px;
+}
+.footer a, .footer a:hover, .footer a:focus, .footer a:visited{
+	text-decoration:none;
+	color:#e5e5e5;
+}
+.footer a:hover{
+	text-decoration:underline;
+
 }
