--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,7 @@
+* {
+	margin: 0;
+}
+
 body, html{
 	width:100%;
 	height:100%;
@@ -13,12 +17,18 @@ body, html{
 .container{
 	width:580px;
 	text-align: center;
-	position:absolute;
+	position:relative;
 	top:50%;
 	left:50%;
 	margin-top:-280px;
 	margin-left:-290px;
+}
 
+.mobile{
+	width:320px;
+	text-align: center;
+	margin: 80px auto 0 auto;
+	display:none;
 }
 
 #glasses{
@@ -29,7 +39,7 @@ body, html{
 .charity{
 	position:absolute;
 	bottom:0;
-	left:0;
+	left:5px;
 }
 .green{
 	color:#00f0ff;
@@ -41,6 +51,9 @@ body, html{
 	font-size:10px;
 	position:fixed;
 	bottom:4px;
+	left:50%;
+	margin-left:-160px;
+	width:320px;
 }
 .footer a, .footer a:hover, .footer a:focus, .footer a:visited{
 	text-decoration:none;
@@ -49,4 +62,10 @@ body, html{
 .footer a:hover{
 	text-decoration:underline;
 
+}
+.hiden{
+	display:none;
+}
+.show{
+	display:block !important;
 }
